--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Load & cache dependencies
         uses: ./.github/workflows/actions/cached-deps
+        with: 
+          caching: 'false'
       # - name: Cache dependencies
       #   id: cache
       #   uses: actions/cache@v3
